# cmake_minimum_required(VERSION <specify CMake version here>)
project(Leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(Leetcode main.cpp MergeKSorted.cpp LongestValidParentheses.cpp LongestValidParentheses.h CourseSchedule.cpp CourseSchedule.h TrapRainWater.cpp TrapRainWater.h longestIncreasingPath.cpp longestIncreasingPath.h MaxPoints.cpp MaxPoints.h KthSmallestInMatrix.cpp KthSmallestInMatrix.h)